Clean up build
remove org.beryx.runtime
bump org.openjfx.javafxplugin version
remove jvmArgs for gradle