@@ -1,7 +1,6 @@
 plugins {
     id 'application'
-    id "org.openjfx.javafxplugin" version "0.0.13"
-    id "org.beryx.runtime" version "1.12.7"
+    id "org.openjfx.javafxplugin" version "0.1.0"
 }
 
 compileJava.options.encoding = "UTF-8"
@@ -28,20 +27,4 @@ run {
     applicationDefaultJvmArgs = ['--add-exports=javafx.graphics/com.sun.javafx.css=ALL-UNNAMED',
                                  '--add-exports=javafx.graphics/com.sun.javafx.scene.input=ALL-UNNAMED',
     ]
-
-    jvmArgs = ['--add-exports=javafx.graphics/com.sun.javafx.css=ALL-UNNAMED',
-               '--add-exports=javafx.graphics/com.sun.javafx.scene.input=ALL-UNNAMED',
-    ]
-}
-
-runtime {
-    options = ['--strip-debug', '--compress', '2', '--no-header-files', '--no-man-pages']
-    modules = [
-            'java.xml',
-            'java.desktop',
-            'jdk.unsupported'
-    ]
-    launcher {
-        noConsole = false
-    }
 }
